# hr-pulse-ai

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/database/: database.py
backend/app/notebooks/: main.ipynb  main_final.ipynb
backend/app/routes/: routes_auth.py  routes_jobs.py  routes_predict.py
backend/app/schemas/: auth_schema.py  models_schema.py
backend/app/services/: db_service.py  ingestion.py  ner_service.py  predictor.py
frontend/: index.html  package-lock.json
frontend-react/: package.json
frontend-react/src/: App.jsx  index.css
frontend/src/: App.jsx  index.css
infra/: main.tf
tests/: test_api.py  test_ingestion.py  test_predictor.py
